--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: BNGrimer;
+  src: url("/fonts/BNGrimer.otf");
+  font-weight: normal;
+}
+
 h1 {
-  font-size: 34px;
+  font-family: BNGrimer;
+  font-size: 90px;
   color: white;
   position: absolute;
   z-index: 10;
-  margin-top: 20px;
-  margin-left: 20px;
+  margin-top: 64px;
+  margin-left: 64px;
 }
