--- a/styles/index.css
+++ b/styles/index.css
@@ -8,10 +8,32 @@ body {
 }
 
 .hero img {
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
   background-color: #211f1f;
+}
+/* styling for second section */
+h2 {
+  color: white;
+}
+p {
+  color: white;
+}
+.section-2 {
+  background-color: black;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
