--- a/styles/typography.css
+++ b/styles/typography.css
@@ -4,6 +4,12 @@
   font-weight: normal;
 }
 
+@font-face {
+  font-family: Roboto;
+  src: url("/fonts/Roboto-Regular.ttf");
+  font-weight: normal;
+}
+
 h1 {
   font-family: BNGrimer;
   font-size: 90px;
@@ -12,4 +18,14 @@ h1 {
   z-index: 10;
   margin-top: 64px;
   margin-left: 64px;
+}
+
+p {
+  font-size: 24px;
+  font-family: Roboto;
+  color: white;
+  position: absolute;
+  margin-top: 244px;
+  margin-left: 64px;
+  z-index: 10;
 }
