--- a/styles/nav.css
+++ b/styles/nav.css
@@ -3,7 +3,7 @@
 
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   box-sizing: border-box;
 }
 
@@ -36,11 +36,12 @@ body {
 }
 
 .navbar .nav-container a {
+  font-family: BNGrimer;
   text-decoration: none;
-  color: #0e2431;
+  color: #cfee4d;
   font-weight: 500;
   font-size: 1.2rem;
-  padding: 0.7rem;
+  /*   padding: 0.7rem; */
 }
 
 .navbar .nav-container a:hover {
@@ -83,7 +84,7 @@ body {
   height: 4px;
   width: 100%;
   border-radius: 10px;
-  background: #0e2431;
+  background: #cfee4d;
 }
 
 .nav-container .hamburger-lines .line1 {
@@ -102,16 +103,17 @@ body {
 
 .navbar .menu-items {
   padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.541);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
   display: flex;
   flex-direction: column;
-  margin-left: -40px;
+  margin-left: 0;
   padding-left: 50px;
   transition: transform 0.5s ease-in-out;
   text-align: center;
+  z-index: 50;
 }
 
 .navbar .menu-items li {
