--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -2,4 +2,32 @@
   .nav-container {
     display: none;
   }
+  .nav-desktop {
+    overflow: hidden;
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    flex-direction: row;
+    background-color: black;
+    width: 100%;
+    z-index: 10;
+    justify-content: space-between;
+  }
+
+  .nav-desktop a {
+    text-decoration: none;
+    color: white;
+    font-family: BNGrimer;
+    font-size: 28px;
+    margin-left: 170px;
+    margin-right: 170px;
+  }
+
+  .nav-desktop li {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border: 1px solid white;
+  }
 }
