--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -2,6 +2,8 @@
   .nav-container {
     display: none;
   }
+
+  /* STYLING FOR NAV DESKTOP */
   .nav-desktop {
     overflow: hidden;
     display: flex;
