--- a/styles/index.css
+++ b/styles/index.css
@@ -17,6 +17,18 @@ body {
   background-color: #211f1f;
 }
 /* styling for second section */
+h2 {
+  font-family: BNGrimer;
+  color: #cfee4d;
+  font-size: 70px;
+}
+p {
+  color: white;
+  padding: 20px;
+}
+.section-2 {
+  background-color: black;
+}
 
 .column {
   display: flex;
