--- a/styles/index.css
+++ b/styles/index.css
@@ -2,42 +2,10 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
   width: 100vw;
+  height: 100%;
   margin: 0;
   background-color: black;
-}
-
-.hero img {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  background-color: #211f1f;
-}
-/* styling for second section */
-h2 {
-  font-family: BNGrimer;
-  color: #cfee4d;
-  font-size: 70px;
-}
-p {
-  color: white;
-  padding: 20px;
-}
-.section-2 {
-  background-color: black;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-}
-.row {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
 }
