--- a/styles/typography.css
+++ b/styles/typography.css
@@ -10,6 +10,13 @@
   font-weight: normal;
 }
 
+/* Global typography */
+p {
+  font-family: Roboto;
+  font-size: 24px;
+  color: white;
+}
+
 h1 {
   font-family: BNGrimer;
   font-size: 90px;
@@ -21,18 +28,7 @@ h1 {
 }
 
 h2 {
-  color: white;
-}
-p {
-  color: white;
-}
-
-p {
-  font-size: 24px;
-  font-family: Roboto;
-  color: white;
-  position: absolute;
-  margin-top: 244px;
-  margin-left: 64px;
-  z-index: 10;
+  font-family: BNGrimer;
+  color: #cfee4d;
+  font-size: 70px;
 }
