--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -26,13 +26,21 @@
   /* LAB-section in desktop */
   .lab-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 4px;
+    padding: 11px;
   }
-  .lab img {
+  .lab-wrapper .lab {
+    position: relative;
+    display: inline-block;
     width: 100%;
     height: 100%;
-    border: 2px solid white;
   }
-  .lab {
+  .lab-wrapper .lab img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
