--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -28,7 +28,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 4px;
     padding: 11px;
   }
   .lab-wrapper .lab {
@@ -42,5 +41,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border: 1px solid white;
   }
 }
