--- a/styles/typography.css
+++ b/styles/typography.css
@@ -23,12 +23,18 @@ h1 {
   color: white;
   position: absolute;
   z-index: 10;
-  margin-top: 64px;
-  margin-left: 64px;
+  margin-top: 5%;
+  margin-left: 2.5%;
 }
 
 h2 {
   font-family: BNGrimer;
   color: #cfee4d;
   font-size: 70px;
+}
+.hero p {
+  position: absolute;
+  z-index: 10;
+  margin-top: 20%;
+  margin-left: 2.5%;
 }
