--- a/styles/typography.css
+++ b/styles/typography.css
@@ -19,7 +19,7 @@ p {
 
 h1 {
   font-family: BNGrimer;
-  font-size: 90px;
+  font-size: 6em;
   color: white;
   position: absolute;
   z-index: 10;
