--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 * {
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -8,7 +9,31 @@ body {
   margin: 0;
   background-color: black;
 }
+/* Phone screen */
+.hero {
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("/images/HERO2.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
+/* Tablet screen */
+.hero {
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("/images/HERO2.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+/* Desktop screen */
 .hero {
   overflow-x: hidden;
   width: 100vw;
