--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,153 +1,146 @@
-/* HAMBURGER MENU */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* Hamburger menu for phone screen  */
+@media screen and (max-width: 560px) {
+  .navbar {
+    width: 100%;
+  }
 
-* {
-  margin: 0;
-  /* padding: 0; */
-  box-sizing: border-box;
-}
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+  }
 
-body {
-  font-family: "Poppins", sans-serif;
-}
+  .navbar .menu-items {
+    display: flex;
+  }
 
-.navbar {
-  width: 100%;
-}
+  .navbar .nav-container li {
+    list-style: none;
+  }
 
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 62px;
-}
+  .navbar .nav-container a {
+    font-family: BNGrimer;
+    text-decoration: none;
+    color: #cfee4d;
+    font-weight: 500;
+    font-size: 1.2rem;
+    /*   padding: 0.7rem; */
+  }
 
-.navbar .menu-items {
-  display: flex;
-}
+  .navbar .nav-container a:hover {
+    font-weight: bolder;
+  }
 
-.navbar .nav-container li {
-  list-style: none;
-}
+  .nav-container {
+    display: block;
+    background-color: rgba(0, 0, 0, 0);
+    position: relative;
+    height: 0px;
+  }
 
-.navbar .nav-container a {
-  font-family: BNGrimer;
-  text-decoration: none;
-  color: #cfee4d;
-  font-weight: 500;
-  font-size: 1.2rem;
-  /*   padding: 0.7rem; */
-}
+  .nav-container .checkbox {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 32px;
+    top: 20px;
+    left: 20px;
+    z-index: 5;
+    opacity: 0;
+    margin-top: 3%;
+    cursor: pointer;
+  }
 
-.navbar .nav-container a:hover {
-  font-weight: bolder;
-}
+  .nav-container .hamburger-lines {
+    display: block;
+    height: 26px;
+    width: 32px;
+    position: absolute;
+    top: 17px;
+    left: 20px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-.nav-container {
-  display: block;
-  position: relative;
-  height: 60px;
-}
+  .nav-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #ffffff;
+  }
 
-.nav-container .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
-  cursor: pointer;
-}
+  .nav-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
 
-.nav-container .hamburger-lines {
-  display: block;
-  height: 26px;
-  width: 32px;
-  position: absolute;
-  top: 17px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  .nav-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
 
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #cfee4d;
-}
+  .nav-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
 
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
+  .navbar .menu-items {
+    padding-top: 40%;
+    background-color: rgba(0, 0, 0, 0.76);
+    height: 100vh;
+    width: 100%;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    padding-left: 0;
+    transition: transform 0.5s ease-in-out;
+    text-align: center;
+    z-index: 50;
+  }
 
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
+  .navbar .menu-items li {
+    margin-top: 6%;
+    margin-bottom: 1.2rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
 
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
+  .logo {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 1.2rem;
+    color: #0e2431;
+  }
 
-.navbar .menu-items {
-  padding-top: 120px;
-  background-color: rgba(0, 0, 0, 0.541);
-  height: 100vh;
-  width: 100%;
-  transform: translate(-150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: 0;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
-  z-index: 50;
-}
+  .nav-container input[type="checkbox"]:checked ~ .menu-items {
+    transform: translateX(0);
+  }
 
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+    transform: rotate(45deg);
+  }
 
-.logo {
-  position: absolute;
-  top: 5px;
-  right: 15px;
-  font-size: 1.2rem;
-  color: #0e2431;
-}
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
 
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
-}
+  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+    transform: rotate(-45deg);
+  }
 
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
-}
+  .nav-container input[type="checkbox"]:checked ~ .logo {
+    display: none;
+  }
 
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-  transform: scaleY(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-  transform: rotate(-45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .logo {
-  display: none;
-}
-/* nav in desktop */
-
-.nav-desktop {
-  display: none;
+  /* this code is to keep the desktop nav to show*/
+  .nav-desktop {
+    display: none;
+  }
 }
 
 /* LAB-section */
