--- a/styles/index.css
+++ b/styles/index.css
@@ -42,5 +42,10 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: relative;
+}
+@media screen and (max-width: 475px) {
+  .hero {
+    background-image: url(/images/HERO-mobile.png);
+  }
 }
