--- a/styles/index.css
+++ b/styles/index.css
@@ -10,15 +10,11 @@ body {
   background-color: black;
 }
 /* Phone screen */
-.hero {
-  overflow-x: hidden;
-  width: 100vw;
-  height: 100vh;
-  background-image: url("/images/HERO2.png");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+@media screen and (max-width: 560px) {
+  .hero {
+    background-image: url(/images/HERO-mobile.png);
+    height: 200px;
+  }
 }
 
 /* Tablet screen */
@@ -43,9 +39,4 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: relative;
-}
-@media screen and (max-width: 475px) {
-  .hero {
-    background-image: url(/images/HERO-mobile.png);
-  }
 }
