added some info-wrapper styling

--- a/styles/index.css
+++ b/styles/index.css
@@ -38,5 +38,5 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: relative;
+  background-attachment: fixed;
 }
