Media query updates

--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -9,26 +9,6 @@
   display: none;
 }
 @media screen and (min-width: 768px) {
-  /* INFO-section in desktop */
-  .info-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex: 50%;
-  }
-  .info-wrapper .column {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    margin: 60px;
-  }
-  .info-wrapper h2 {
-    padding-bottom: 3%;
-  }
-  .info-wrapper p {
-    padding-top: 6%;
-  }
-
   /* LAB-section in desktop */
   .lab-wrapper {
     display: grid;
@@ -47,5 +27,49 @@
     height: 100%;
     object-fit: cover;
     border: 1px solid white;
+  }
+}
+
+/* Phone screen */
+@media screen and (max-width: 560px) {
+}
+
+/* Tablet screen */
+@media screen and (min-width: 560px) {
+}
+
+/* Desktop screen*/
+@media screen and (min-width: 768px) {
+}
+
+/* Big desktop*/
+@media screen and (min-width: 1024px) {
+}
+/* XL desktop */
+@media screen and (min-width: 1280px) {
+  .info-wrapper {
+    margin-top: 1%;
+    display: flex;
+    flex-direction: row;
+    flex: 50%;
+  }
+  .info-wrapper .column {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin: 60px;
+  }
+
+  .column img {
+    width: 100%;
+    height: 100%;
+    margin-left: 8%;
+  }
+  .info-wrapper h2 {
+    padding-bottom: 3%;
+  }
+  .info-wrapper p {
+    padding-top: 6%;
   }
 }
