--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -8,6 +8,7 @@
   height: 100%;
   display: none;
 }
+
 @media screen and (min-width: 768px) {
   /* LAB-section in desktop */
   .lab-wrapper {
@@ -44,7 +45,33 @@
 
 /* Big desktop*/
 @media screen and (min-width: 1024px) {
+  .info-wrapper {
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    flex: 50%;
+  }
+  .info-wrapper .column {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin: 60px;
+  }
+
+  .column img {
+    width: 100%;
+    height: 100%;
+    margin-left: 8%;
+  }
+  .info-wrapper h2 {
+    padding-bottom: 3%;
+  }
+  .info-wrapper p {
+    padding-top: 6%;
+  }
 }
+
 /* XL desktop */
 @media screen and (min-width: 1280px) {
   .info-wrapper {
