--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -46,23 +46,25 @@
 /* Big desktop*/
 @media screen and (min-width: 1024px) {
   .info-wrapper {
-    margin-top: 5%;
+    /*    margin-top: 1%; */
     display: flex;
     flex-direction: row;
     flex: 50%;
   }
+
   .info-wrapper .column {
     position: relative;
     display: inline-block;
     width: 100%;
     height: 100%;
-    margin: 60px;
+    margin-top: 5%;
   }
 
   .column img {
     width: 100%;
     height: 100%;
-    margin-left: 8%;
+    /*     margin-left: 15%;
+ */
   }
   .info-wrapper h2 {
     padding-bottom: 3%;
@@ -75,23 +77,26 @@
 /* XL desktop */
 @media screen and (min-width: 1280px) {
   .info-wrapper {
-    margin-top: 1%;
+    /*    margin-top: 1%; */
     display: flex;
     flex-direction: row;
     flex: 50%;
+    margin-bottom: 5%;
   }
+
   .info-wrapper .column {
     position: relative;
     display: inline-block;
     width: 100%;
     height: 100%;
-    margin: 60px;
+    margin-top: 5%;
   }
 
   .column img {
     width: 100%;
     height: 100%;
-    margin-left: 8%;
+    /*     margin-left: 15%;
+ */
   }
   .info-wrapper h2 {
     padding-bottom: 3%;
