--- a/styles/typography.css
+++ b/styles/typography.css
@@ -40,10 +40,23 @@ p {
   }
 
   p {
-    font-family: Roboto;
-    font-size: 16px;
+    font-size: 1em;
     margin-top: 55%;
     margin-left: 5%;
+  }
+
+  /* H2 for info section */
+  .column h2 {
+    font-size: 2.5em;
+    margin-top: 5%;
+    margin-left: 4.5%;
+  }
+
+  .column p {
+    font-size: 1em;
+    max-width: 400px;
+    margin-top: 5%;
+    margin-bottom: 5%;
   }
 }
 
@@ -52,6 +65,19 @@ p {
   h1 {
     font-family: BNGrimer;
     font-size: 2.6em;
+  }
+
+  /* H2 for info section */
+  .column h2 {
+    margin-top: 10%;
+    margin-left: 4.5%;
+  }
+
+  .column p {
+    font-size: 1.2em;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 4%;
   }
 }
 
@@ -63,18 +89,21 @@ p {
     margin-left: 2.5%;
   }
 
-  h2 {
-    font-size: 70px;
-  }
-
-  p {
-    font-size: 1.5em;
-  }
-
   .hero p {
     margin-top: 35%;
     margin-left: 2.6%;
     font-size: 1.2em;
+  }
+
+  /* H2 for info section */
+  .column h2 {
+    font-size: 3em;
+    margin-top: 10%;
+    margin-left: 4.5%;
+  }
+
+  .column p {
+    margin-bottom: 7%;
   }
 }
 
@@ -89,6 +118,17 @@ p {
     margin-left: 2.8%;
     font-size: 1.2em;
   }
+
+  /* H2 for info section */
+  .column h2 {
+    font-size: 3.1em;
+    margin-top: 1%;
+    margin-left: 4%;
+  }
+
+  .column p {
+    margin-bottom: 7%;
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -101,5 +141,16 @@ p {
     margin-top: 22%;
     margin-left: 2.8%;
     font-size: 1.2em;
+  }
+
+  /* H2 for info section */
+  .column h2 {
+    font-size: 4.5em;
+    margin-top: 1%;
+    margin-left: 4%;
+  }
+
+  .column p {
+    margin-bottom: 7%;
   }
 }
