--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -9,44 +9,37 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
-  /* LAB-section in desktop */
-  .lab-wrapper {
-    display: grid;
-    grid-template-columns: (1fr 1fr 1fr);
-    padding: 11px;
-  }
-  .lab-wrapper .lab {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-  .lab-wrapper .lab img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: 1px solid white;
-  }
-}
-
 /* Phone screen */
 @media screen and (max-width: 560px) {
+  .column {
+    margin-top: 10%;
+    margin-bottom: 15%;
+  }
+
+  .column img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /* Tablet screen */
 @media screen and (min-width: 560px) {
+  .column {
+    margin-bottom: 15%;
+  }
 }
 
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
+  .column img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /* Big desktop*/
 @media screen and (min-width: 1024px) {
   .info-wrapper {
-    /*    margin-top: 1%; */
     display: flex;
     flex-direction: row;
     flex: 50%;
@@ -63,8 +56,6 @@
   .column img {
     width: 100%;
     height: 100%;
-    /*     margin-left: 15%;
- */
   }
   .info-wrapper h2 {
     padding-bottom: 3%;
@@ -77,7 +68,7 @@
 /* XL desktop */
 @media screen and (min-width: 1280px) {
   .info-wrapper {
-    /*    margin-top: 1%; */
+    margin-top: 3%;
     display: flex;
     flex-direction: row;
     flex: 50%;
@@ -103,5 +94,29 @@
   }
   .info-wrapper p {
     padding-top: 6%;
+  }
+}
+
+/* ------ LAB SEKTION SOM SKA STRUKTURERAS */
+
+@media screen and (min-width: 768px) {
+  /* LAB-section in desktop */
+  .lab-wrapper {
+    display: grid;
+    grid-template-columns: (1fr 1fr 1fr);
+    padding: 11px;
+  }
+  .lab-wrapper .lab {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+  }
+  .lab-wrapper .lab img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1px solid white;
   }
 }
