--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -25,12 +25,16 @@
 /* Tablet screen */
 @media screen and (min-width: 560px) {
   .column {
-    margin-bottom: 15%;
+    margin-bottom: 10%;
   }
 }
 
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
+  .column {
+    margin-bottom: 0%;
+  }
+
   .column img {
     width: 100%;
     height: 100%;
@@ -104,7 +108,7 @@
   .lab-wrapper {
     display: grid;
     grid-template-columns: (1fr 1fr 1fr);
-    padding: 11px;
+    padding: 0%;
   }
   .lab-wrapper .lab {
     position: relative;
