--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -47,6 +47,7 @@
     display: flex;
     flex-direction: row;
     flex: 50%;
+    margin-bottom: 5%;
   }
 
   .info-wrapper .column {
@@ -108,6 +109,7 @@
   .lab-wrapper {
     display: grid;
     grid-template-columns: (1fr 1fr 1fr);
+    position: relative;
     padding: 0%;
   }
   .lab-wrapper .lab {
@@ -118,6 +120,7 @@
   }
   .lab-wrapper .lab img {
     display: block;
+    position: relative;
     width: 100%;
     height: 100%;
     object-fit: cover;
