--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -39,6 +39,14 @@
     width: 100%;
     height: 100%;
   }
+
+  .lab-wrapper {
+    display: grid;
+    grid-template-columns: (1fr 1fr 1fr);
+    position: relative;
+    padding: 0%;
+    margin-top: 5%;
+  }
 }
 
 /* Big desktop*/
@@ -106,12 +114,7 @@
 
 @media screen and (min-width: 768px) {
   /* LAB-section in desktop */
-  .lab-wrapper {
-    display: grid;
-    grid-template-columns: (1fr 1fr 1fr);
-    position: relative;
-    padding: 0%;
-  }
+
   .lab-wrapper .lab {
     position: relative;
     display: inline-block;
