--- a/styles/typography.css
+++ b/styles/typography.css
@@ -95,7 +95,7 @@ p {
     font-size: 1.2em;
   }
 
-  /* H2 for info section */
+  /* CSS for info section */
   .column h2 {
     font-size: 3em;
     margin-top: 10%;
