--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -9,8 +9,18 @@
   display: none;
 }
 
+button {
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 15%;
+  font-family: Roboto;
+  font-size: 1.2em;
+  border: 0.5px solid white;
+}
 /* Phone screen */
 @media screen and (max-width: 560px) {
+  /* CSS  info section */
   .column {
     margin-top: 10%;
     margin-bottom: 15%;
@@ -24,13 +34,26 @@
 
 /* Tablet screen */
 @media screen and (min-width: 560px) {
+  /* CSS info section */
+
   .column {
     margin-bottom: 10%;
+  }
+
+  /* CSS LAB section  */
+  .lab-wrapper {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    position: relative;
+    padding: 0%;
+    margin-top: 5%;
   }
 }
 
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
+  /* CSS info section */
   .column {
     margin-bottom: 0%;
   }
@@ -40,81 +63,7 @@
     height: 100%;
   }
 
-  .lab-wrapper {
-    display: grid;
-    grid-template-columns: (1fr 1fr 1fr);
-    position: relative;
-    padding: 0%;
-    margin-top: 5%;
-  }
-}
-
-/* Big desktop*/
-@media screen and (min-width: 1024px) {
-  .info-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex: 50%;
-    margin-bottom: 5%;
-  }
-
-  .info-wrapper .column {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    margin-top: 5%;
-  }
-
-  .column img {
-    width: 100%;
-    height: 100%;
-  }
-  .info-wrapper h2 {
-    padding-bottom: 3%;
-  }
-  .info-wrapper p {
-    padding-top: 6%;
-  }
-}
-
-/* XL desktop */
-@media screen and (min-width: 1280px) {
-  .info-wrapper {
-    margin-top: 3%;
-    display: flex;
-    flex-direction: row;
-    flex: 50%;
-    margin-bottom: 5%;
-  }
-
-  .info-wrapper .column {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    margin-top: 5%;
-  }
-
-  .column img {
-    width: 100%;
-    height: 100%;
-    /*     margin-left: 15%;
- */
-  }
-  .info-wrapper h2 {
-    padding-bottom: 3%;
-  }
-  .info-wrapper p {
-    padding-top: 6%;
-  }
-}
-
-/* ------ LAB SEKTION SOM SKA STRUKTURERAS */
-
-@media screen and (min-width: 768px) {
-  /* LAB-section in desktop */
-
+  /* CSS lab section */
   .lab-wrapper .lab {
     position: relative;
     display: inline-block;
@@ -128,5 +77,85 @@
     height: 100%;
     object-fit: cover;
     border: 1px solid white;
+  }
+
+  .lab-wrapper {
+    display: grid;
+    grid-template-columns: (1fr 1fr 1fr);
+    position: relative;
+    padding: 0%;
+    margin-top: 5%;
+  }
+}
+
+/* Big desktop*/
+@media screen and (min-width: 1024px) {
+  /* CSS info section */
+  .info-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex: 50%;
+    margin-bottom: 5%;
+  }
+
+  .info-wrapper .column {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin-top: 5%;
+  }
+
+  .column img {
+    width: 100%;
+    height: 100%;
+  }
+  .info-wrapper h2 {
+    padding-bottom: 3%;
+  }
+  .info-wrapper p {
+    padding-top: 6%;
+  }
+
+  /* CSS LAB section */
+  button {
+    height: 11.5%;
+    font-size: 1.2em;
+  }
+}
+
+/* XL desktop */
+@media screen and (min-width: 1280px) {
+  /* CSS info section */
+  .info-wrapper {
+    margin-top: 3%;
+    display: flex;
+    flex-direction: row;
+    flex: 50%;
+    margin-bottom: 5%;
+  }
+  .info-wrapper .column {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin-top: 5%;
+  }
+
+  .column img {
+    width: 100%;
+    height: 100%;
+  }
+  .info-wrapper h2 {
+    padding-bottom: 3%;
+  }
+  .info-wrapper p {
+    padding-top: 6%;
+  }
+
+  /* CSS LAB section */
+  button {
+    height: 6.5%;
+    font-size: 1.2em;
   }
 }
