--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -13,10 +13,13 @@ button {
   background-color: black;
   color: white;
   width: 100%;
-  height: 15%;
   font-family: Roboto;
-  font-size: 1.2em;
   border: 0.5px solid white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ceee4d65;
 }
 /* Phone screen */
 @media screen and (max-width: 560px) {
@@ -85,6 +88,11 @@ button {
     position: relative;
     padding: 0%;
     margin-top: 5%;
+  }
+
+  button {
+    height: 14%;
+    font-size: 1.2em;
   }
 }
 
