--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -1,13 +1,4 @@
 /* LAB-section */
-.lab-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-.lab img {
-  width: 100%;
-  height: 100%;
-  display: none;
-}
 
 button {
   background-color: black;
@@ -19,7 +10,7 @@ button {
 }
 
 button:hover {
-  background-color: #ceee4d65;
+  background-color: #5be58b46;
 }
 /* Phone screen */
 @media screen and (max-width: 560px) {
@@ -33,7 +24,25 @@ button:hover {
     width: 100%;
     height: 100%;
   }
-}
+  /* CSS LAB section */
+
+  .lab-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    position: relative;
+    padding: 0%;
+    margin-top: 5%;
+  }
+
+  .lab img {
+    width: 100%;
+    height:70%;
+  }
+
+  .lab p {
+    margin-top: 0;
+  }
+
 
 /* Tablet screen */
 @media screen and (min-width: 560px) {
