--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -15,7 +15,7 @@ button:hover {
 /* Phone screen */
 @media screen and (max-width: 560px) {
   /* CSS  info section */
-  .column {
+  /*  .column {
     margin-top: 10%;
     margin-bottom: 15%;
   }
@@ -23,12 +23,14 @@ button:hover {
   .column img {
     width: 100%;
     height: 100%;
-  }
+  } */
+
   /* CSS LAB section */
 
   .lab-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: 1fr;
     position: relative;
     padding: 0%;
     margin-top: 5%;
@@ -36,37 +38,37 @@ button:hover {
 
   .lab img {
     width: 100%;
-    height:70%;
+    height: 90%;
   }
 
   .lab p {
     margin-top: 0;
   }
-
+}
 
 /* Tablet screen */
 @media screen and (min-width: 560px) {
   /* CSS info section */
-
+/* 
   .column {
     margin-bottom: 10%;
   }
 
   /* CSS LAB section  */
-  .lab-wrapper {
+/*   .lab-wrapper {
     display: grid;
     grid-auto-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     position: relative;
     padding: 0%;
     margin-top: 5%;
-  }
+  } */ */
 }
 
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
   /* CSS info section */
-  .column {
+  /* .column {
     margin-bottom: 0%;
   }
 
@@ -74,8 +76,15 @@ button:hover {
     width: 100%;
     height: 100%;
   }
-
+ */
   /* CSS lab section */
+
+  .lab-wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+    position: relative;
+    padding: 0%;
+    margin-top: 5%;
+  }
   .lab-wrapper .lab {
     position: relative;
     display: inline-block;
@@ -91,14 +100,6 @@ button:hover {
     border: 1px solid white;
   }
 
-  .lab-wrapper {
-    display: grid;
-    grid-template-columns: (1fr 1fr 1fr);
-    position: relative;
-    padding: 0%;
-    margin-top: 5%;
-  }
-
   button {
     height: 14%;
     font-size: 1.2em;
@@ -108,7 +109,7 @@ button:hover {
 /* Big desktop*/
 @media screen and (min-width: 1024px) {
   /* CSS info section */
-  .info-wrapper {
+  /* .info-wrapper {
     display: flex;
     flex-direction: row;
     flex: 50%;
@@ -121,8 +122,8 @@ button:hover {
     width: 100%;
     height: 100%;
     margin-top: 5%;
-  }
-
+  } */
+/* 
   .column img {
     width: 100%;
     height: 100%;
@@ -132,7 +133,7 @@ button:hover {
   }
   .info-wrapper p {
     padding-top: 6%;
-  }
+  } */
 
   /* CSS LAB section */
   button {
@@ -144,7 +145,7 @@ button:hover {
 /* XL desktop */
 @media screen and (min-width: 1280px) {
   /* CSS info section */
-  .info-wrapper {
+  /* .info-wrapper {
     margin-top: 3%;
     display: flex;
     flex-direction: row;
@@ -168,7 +169,7 @@ button:hover {
   }
   .info-wrapper p {
     padding-top: 6%;
-  }
+  } */
 
   /* CSS LAB section */
   button {
