--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,20 @@ body {
   background-color: black;
   overflow-x: hidden;
 }
+
+button {
+  background-color: black;
+  color: white;
+  width: 100%;
+  font-family: Roboto;
+  border: 0.5px solid white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #5be58b46;
+}
+
 /* Phone screen */
 @media screen and (max-width: 560px) {
   .hero {
