--- a/styles/typography.css
+++ b/styles/typography.css
@@ -128,6 +128,13 @@ p {
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: rgb(0, 0, 0);
   }
+
+  /* CSS for EXPLORE section */
+  .explore-section h2 {
+    margin-left: 2.5%;
+    margin-top: 9%;
+    font-size: 2.5em;
+  }
 }
 
 /* Big desktop*/
