--- a/styles/info.css
+++ b/styles/info.css
@@ -8,6 +8,8 @@
 .column img {
   width: 100%;
   height: 100%;
+  padding-bottom: 10%;
+  border-bottom: 1px white solid;
 }
 
 /* Tablet screen */
@@ -36,6 +38,7 @@
   .column img {
     width: 100%;
     height: 100%;
+    border-bottom: none;
   }
 }
 
