--- a/styles/LAB.css
+++ b/styles/LAB.css
@@ -1,7 +1,7 @@
 /* Phone screen */
 .lab-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   position: relative;
   padding: 0%;
@@ -14,7 +14,7 @@
 }
 
 .lab p {
-  margin-top: 0;
+  margin-top: -13%;
 }
 
 /* Tablet screen */
