--- a/styles/explore.css
+++ b/styles/explore.css
@@ -1,5 +1,18 @@
 /* Phone screen */
 .explore-wrapper {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  padding-bottom: 10%;
+}
+.explore {
+  position: relative;
+  display: inline-block;
+}
+.explore-wrapper .explore img {
+  display: block;
+  object-fit: cover;
+  border: 1px solid white;
+  max-width: 100%;
 }
 
 /* Tablet screen */
@@ -13,6 +26,7 @@
     margin-top: 5%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 10%;
   }
   .explore {
     position: relative;
@@ -33,6 +47,7 @@
     margin-top: 5%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 10%;
   }
   .explore {
     position: relative;
@@ -53,6 +68,7 @@
     margin-top: 5%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 10%;
   }
   .explore {
     position: relative;
