--- a/styles/typography.css
+++ b/styles/typography.css
@@ -133,7 +133,33 @@ p {
   .explore-section h2 {
     margin-left: 2.5%;
     margin-top: 9%;
-    font-size: 2.5em;
+    font-size: 2.7em;
+  }
+  .explore-wrapper p {
+    font-family: BNGrimer;
+    font-size: 2em;
+    position: absolute;
+    margin-top: 45%;
+    margin-left: 2.5%;
+  }
+
+  /* CSS for CONTACT section */
+  .contact h2 {
+    font-family: BNGrimer;
+    font-size: 3em;
+    color: white;
+    margin-top: 5%;
+    margin-bottom: 4%;
+    margin-left: 2.5%;
+    position: absolute;
+  }
+  .contact p {
+    font-family: Roboto;
+    font-size: 1.4em;
+    margin-top: 18%;
+    margin-left: 2.5%;
+    position: absolute;
+    text-align: start;
   }
 }
 
@@ -186,6 +212,18 @@ p {
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: rgb(0, 0, 0);
   }
+  /* H2 for info section */
+  .column h2 {
+    margin-top: 10%;
+    margin-left: 4.5%;
+  }
+
+  .column p {
+    font-size: 1.2em;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 4%;
+  }
 }
 
 /* XL desktop */
@@ -237,5 +275,17 @@ p {
     margin-left: 12%;
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: rgb(0, 0, 0);
+  }
+  /* H2 for info section */
+  .column h2 {
+    margin-top: 10%;
+    margin-left: 4.5%;
+  }
+
+  .column p {
+    font-size: 1.2em;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 4%;
   }
 }
