--- a/styles/explore.css
+++ b/styles/explore.css
@@ -1,4 +1,10 @@
 /* Phone screen */
+
+.explore-section h2 {
+  margin-bottom: 8%;
+  margin-left: 4.5%;
+}
+
 .explore-wrapper {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -8,6 +14,7 @@
   position: relative;
   display: inline-block;
 }
+
 .explore-wrapper .explore img {
   display: block;
   object-fit: cover;
