--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,7 +1,7 @@
 /* Phone screen */
 
 .hero {
-  background-image: url(/images/HERO-mobile.png);
+  background-image: url("/images/HERO-mobile.png");
   height: 70vh;
   /*   width: 100%; */
 }
