--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,7 @@ button {
   background-color: black;
   color: white;
   width: 100%;
+  height: 60px;
   font-family: Roboto;
   border: 0.5px solid white;
   cursor: pointer;
@@ -42,4 +43,10 @@ button:hover {
   background-repeat: no-repeat;
   background-attachment: fixed;
   border: 1px solid white;
+}
+
+@media screen and (min-width: 768px) {
+  hr {
+    display: none;
+  }
 }
