--- a/styles/info.css
+++ b/styles/info.css
@@ -3,12 +3,22 @@
 .column {
   margin-top: 10%;
   margin-bottom: 15%;
+  position: relative;
 }
 
 .column img {
   width: 100%;
   height: 100%;
   padding-bottom: 10%;
+}
+
+.column button {
+  font-size: 1em;
+  width: 200px;
+  font-family: Roboto;
+  border: 0.5px solid white;
+  cursor: pointer;
+  margin-left: 6.5%;
 }
 
 /* Tablet screen */
@@ -39,6 +49,15 @@
     height: 100%;
     border-bottom: none;
   }
+
+  .column button {
+    width: 200px;
+    height: 60px;
+    font-family: Roboto;
+    border: 0.5px solid white;
+    cursor: pointer;
+    margin-left: 6.5%;
+  }
 }
 
 /* Big desktop*/
@@ -58,6 +77,10 @@
     margin-top: 5%;
   }
 
+  .column button {
+    font-size: 1.2em;
+  }
+
   .column img {
     width: 100%;
     height: 100%;
@@ -72,11 +95,11 @@
 /* XL desktop */
 @media screen and (min-width: 1280px) {
   .info-wrapper {
-    margin-top: 3%;
+    margin-top: 0%;
     display: flex;
     flex-direction: row;
     flex: 50%;
-    margin-bottom: 5%;
+    margin-bottom: -4%;
   }
   .info-wrapper .column {
     position: relative;
@@ -90,6 +113,7 @@
     width: 100%;
     height: 100%;
   }
+
   .info-wrapper h2 {
     padding-bottom: 3%;
   }
