--- a/styles/typography.css
+++ b/styles/typography.css
@@ -174,7 +174,28 @@ h1 {
   /* CSS for FOOTER section */
   .footer-wrapper h2 {
     font-family: BNGrimer;
-    font-size: 3em;
+    font-size: 3.2em;
+    margin-bottom: 5%;
+  }
+  .footer-wrapper h5 {
+    font-family: Roboto;
+    font-size: 1em;
+    color: white;
+    z-index: 1;
+    margin-bottom: 5%;
+  }
+  .footer-wrapper h4 {
+    font-family: Roboto;
+    color: white;
+    font-size: 1.8em;
+    margin-left: 5%;
+  }
+  .footer-wrapper p {
+    font-family: Roboto;
+    font-size: 1em;
+    margin-left: 5%;
+    padding: 2%;
+    padding-left: 0;
   }
 }
 
