--- a/styles/contact.css
+++ b/styles/contact.css
@@ -44,41 +44,36 @@
     margin-top: 51%;
     margin-left: 5.5%;
   }
+
+  .contact-content img {
+    width: 100vw;
+    height: 70vh;
+  }
 }
 
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
-  .contact {
-    margin-bottom: 10%;
-  }
-
   .contact h2 {
+    font-family: BNGrimer;
     font-size: 2.7em;
-    margin-left: 4.5%;
-    position: absolute;
-    margin-top: 7%;
-  }
-
-  .contact p {
-    font-family: Roboto;
-    font-size: 1.2em;
-    margin-top: 25%;
+    color: white;
+    margin-top: 5%;
+    margin-bottom: 4%;
     margin-left: 2.5%;
     position: absolute;
-    text-align: start;
   }
 
   .contact button {
     margin-left: 2.5%;
-    margin-top: 32%;
+    margin-top: 49%;
     width: 20%;
     position: absolute;
     font-size: 1.4em;
     font-family: Roboto;
   }
-
   .contact-content img {
     width: 100%;
+    height: 80vh;
   }
 }
 
@@ -86,10 +81,41 @@
 @media screen and (min-width: 1024px) {
   .contact-content img {
     width: 100%;
-    height: 100%;
+    height: 88vh;
+  }
+
+  .contact button {
+    margin-left: 2.5%;
+    margin-top: 40%;
+    width: 20%;
+    position: absolute;
+    font-size: 1.4em;
+    font-family: Roboto;
   }
 }
 
 /* XL desktop */
 @media screen and (min-width: 1280px) {
+  .contact-content img {
+    width: 100%;
+    height: 88vh;
+  }
+
+  .contact p {
+    font-family: Roboto;
+    font-size: 1.2em;
+    margin-top: 18%;
+    margin-left: 2.5%;
+    position: absolute;
+    text-align: start;
+  }
+
+  .contact button {
+    margin-left: 2.5%;
+    margin-top: 30%;
+    width: 20%;
+    position: absolute;
+    font-size: 1.4em;
+    font-family: Roboto;
+  }
 }
