--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,6 +5,31 @@
   margin-bottom: 5%;
 }
 
+.footer-container h2 {
+  font-size: 2.1em;
+  margin-top: 10%;
+  margin-left: 4.5%;
+}
+
+.footer-container h2 {
+  color: white;
+  margin-top: 10%;
+  margin-left: 4.5%;
+}
+
+.footer-container p {
+  font-size: 1em;
+  color: white;
+  margin-left: 4.5%;
+  margin-top: 3%;
+}
+
+.icons-wrapper {
+  margin-top: 4%;
+  margin-bottom: 5%;
+  margin-left: 4.5%;
+}
+
 /* Tablet screen */
 @media screen and (min-width: 560px) {
   .footer-wrapper {
@@ -18,6 +43,7 @@
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
   .footer-wrapper {
+    width: 100vw;
     display: flex;
     flex-direction: row;
     flex: 50%;
