--- a/styles/LAB.css
+++ b/styles/LAB.css
@@ -59,10 +59,21 @@ button {
     object-fit: cover;
     border: 1px solid white;
   }
-  .lab-wrapper .lab img:hover {
-    opacity: 0.5;
-    transition: 0.2s ease;
-    background: rgba(24, 207, 0, 0.82);
+
+  .lab-content {
+    position: relative;
+  }
+  .img-hover {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(91, 229, 140, 0.5);
+  }
+  .lab-content:hover .img-hover {
+    display: block;
   }
 
   button {
