--- a/styles/contact.css
+++ b/styles/contact.css
@@ -15,7 +15,7 @@
 }
 
 .contact button {
-  background-color: rgba(0, 0, 0, 0.719);
+  background-color: black;
   width: 200px;
   height: 60px;
   font-family: Roboto;
