--- a/styles/nav.css
+++ b/styles/nav.css
@@ -167,37 +167,6 @@
     padding: 10px;
     font-family: BNGrimer;
     font-size: 28px;
-  }
-
-  /* INFO-section in desktop */
-  .info-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex: 50%;
-  }
-  .info-wrapper .column {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-
-  /* LAB-section in desktop */
-  .lab-wrapper {
-    display: grid;
-    grid-template-columns: (1fr 1fr 1fr);
-  }
-  .lab-wrapper .lab {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-  .lab-wrapper .lab img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: 1px solid white;
+    cursor: pointer;
   }
 }
